WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121421
CSS Unit vmax and vmin in border-width not handled.
https://bugs.webkit.org/show_bug.cgi?id=121421
Summary
CSS Unit vmax and vmin in border-width not handled.
gur.trio
Reported
2013-09-16 03:48:04 PDT
The border-width if in terms of vmax or vmin is not being applied.
Attachments
test case with border-width in vmax
(334 bytes, text/html)
2013-09-16 03:49 PDT
,
gur.trio
no flags
Details
Patch
(9.65 KB, patch)
2013-09-16 21:21 PDT
,
gur.trio
no flags
Details
Formatted Diff
Diff
Patch
(9.65 KB, patch)
2013-09-16 22:03 PDT
,
gur.trio
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
gur.trio
Comment 1
2013-09-16 03:49:08 PDT
Created
attachment 211755
[details]
test case with border-width in vmax
gur.trio
Comment 2
2013-09-16 21:21:55 PDT
Created
attachment 211862
[details]
Patch
Early Warning System Bot
Comment 3
2013-09-16 21:29:48 PDT
Comment on
attachment 211862
[details]
Patch
Attachment 211862
[details]
did not pass qt-ews (qt): Output:
http://webkit-queues.appspot.com/results/1869270
EFL EWS Bot
Comment 4
2013-09-16 21:40:59 PDT
Comment on
attachment 211862
[details]
Patch
Attachment 211862
[details]
did not pass efl-ews (efl): Output:
http://webkit-queues.appspot.com/results/1869269
Build Bot
Comment 5
2013-09-16 21:47:57 PDT
Comment on
attachment 211862
[details]
Patch
Attachment 211862
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/1804994
Build Bot
Comment 6
2013-09-16 22:01:18 PDT
Comment on
attachment 211862
[details]
Patch
Attachment 211862
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/1850239
gur.trio
Comment 7
2013-09-16 22:03:08 PDT
Created
attachment 211863
[details]
Patch
gur.trio
Comment 8
2013-09-17 05:36:14 PDT
(In reply to
comment #7
)
> Created an attachment (id=211863) [details] > Patch
Hi Darin. Any more changes required?
gur.trio
Comment 9
2013-09-18 20:13:18 PDT
(In reply to
comment #8
)
> (In reply to
comment #7
) > > Created an attachment (id=211863) [details] [details] > > Patch > > Hi Darin. Any more changes required?
Hi Darin. Could you please set the commit-queue+ flag incase no more changes are required.
WebKit Commit Bot
Comment 10
2013-09-19 04:02:29 PDT
Comment on
attachment 211863
[details]
Patch Clearing flags on attachment: 211863 Committed
r156091
: <
http://trac.webkit.org/changeset/156091
>
WebKit Commit Bot
Comment 11
2013-09-19 04:02:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug